First implementation of the AsyncSocketChannelExtensionsTests. Applied linter.